fix: streamline logging format in email rate limiting and error handling